--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   http_parser:
   cached_network_image:
   dartz: ^0.10.1
+  shimmer: ^3.0.0
+  flutter_launcher_icons: ^0.14.4
+  pin_code_fields: ^8.0.1
+
 dev_dependencies:
 
   injectable_generator:
@@ -76,6 +80,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/images/appIcon.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
